clusters/cluster1/qa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-app
  namespace: qa
  labels:
    app: color
    environment: qa
spec:
  replicas: 2
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      containers:
      - image: tayebe/color-app:1.1.0
        name: white
        ports:
        - containerPort: 8080
