clusters/cluster1/qa/service.yml
apiVersion: v1
kind: Service
metadata:
  name: color-app
  namespace: qa
spec:
  selector:
    app: color
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
