clusters/cluster1/qa/usage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qa
  annotations:
    name: qa
---
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  namespace: qa
  labels:
    app: http-echo
spec:
  containers:
  - name: foo-app
    image: phantasm/http-echo:arm64
    args:
    - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  namespace: qa
  labels:
    app: http-echo
spec:
  containers:
  - name: bar-app
    image: phantasm/http-echo:arm64
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
  namespace: qa
spec:
  type: LoadBalancer
  selector:
    app: http-echo
  ports:
  # Default port used by the image
  - port: 5678
